--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,43 @@ google-services.json
 
 # Android Profiling
 *.hprof
+
+# Node modules
+node_modules/
+
+# Build output
+dist/
+
+# Vite cache
+.vite/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Environment variables
+.env
+.env.*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional: coverage reports
+coverage/
+
+# Optional: local build artifacts
+*.local
